Update DEVELOPER.md